# Stigmer-simulations

./: CMakeLists.txt  README.md
data/example/exp/observables/: B1.txt  B2.txt  B3.txt  F_P.txt  F_Q.txt  IPR_P.txt  IPR_Q.txt  IPR_p_.txt  IPR_q_.txt  P.txt  Q.txt  R.txt  S.txt  S_group.txt  S_mean.txt  V1.txt  V2.txt  V3.txt  VB1.txt  VB2.txt  VB3.txt  p_.txt  proba_find_72_71.txt  proba_find_86_85_84.txt  proba_find_99.txt  q_.txt
data/example/model/parameters/: cells.txt  players_profiles.txt  stars.json
src/: main_MC.cpp  main_MC_opt_S_group.cpp  main_MC_opt_S_solo.cpp  main_MC_opt_rk.cpp  main_obs.cpp  main_obs_opt_S_group.cpp  main_obs_opt_S_solo.cpp  main_obs_pred_100_rounds.cpp  main_obs_pred_20_players.cpp
src/agent/: Agent.cpp  Agent.h  CMakeLists.txt  Cell.h  OpeningStrategy.cpp  OpeningStrategy.h  RatingStrategy.cpp  RatingStrategy.h
src/game/: CMakeLists.txt  Game.cpp  Game.h  Map.cpp  Map.h  Rule.cpp  Rule.h
src/game_analyzer/: CMakeLists.txt  GameAnalyzer.cpp  GameAnalyzer.h
src/helpers/: CMakeLists.txt  helper_all.cpp  helper_all.h
src/random/: CMakeLists.txt  myRandom.cpp  myRandom.h  myRandom.tpp
